[project]
name = "eos-demo"
version = "0.1.0"
description = "Tiny Edge of Stability demo with full-batch gradient descent."
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.8",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "plotly>=5.24",
    "torch>=2.3",
]
